fix: z-index issue with navbar

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,5 +7,6 @@
     header {
         position: sticky;
         top: 0;
+        z-index: 1;
     }
 }
