--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -5,7 +5,6 @@
     border-radius: 1.5em;
     display: grid;
     place-items: center;
-    z-index: -1;
     cursor: pointer;
 
 
